# advent-of-code-2024

./: .cruft.json  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
aoc/: utils.py
aoc/day_01/: README.md  utils.py
aoc/day_01/part_1/: solution.py
aoc/day_01/part_2/: solution.py
aoc/day_02/: README.md  utils.py
aoc/day_02/part_1/: solution.py
aoc/day_02/part_2/: solution.py
aoc/day_03/: README.md  utils.py
aoc/day_03/part_1/: solution.py
aoc/day_03/part_2/: solution.py
aoc/day_04/: README.md  utils.py
aoc/day_04/part_1/: solution.py
aoc/day_04/part_2/: solution.py
aoc/day_05/: README.md  utils.py
aoc/day_05/part_1/: solution.py
aoc/day_05/part_2/: solution.py
tests/: test_day_01.py  test_day_02.py  test_day_03.py  test_day_04.py  test_day_05.py  test_puzzle_solutions.py
